# grotto

./: .gitignore  CLAUDE.md  Cargo.toml  DAEMON-PLAN.md  README.md  SERVE-PLAN.md
.github/workflows/: ci.yml
crates/grotto-cli/: Cargo.toml
crates/grotto-cli/src/: main.rs
crates/grotto-cli/tests/: spawn_startup_failure.rs
crates/grotto-core/: Cargo.toml
crates/grotto-core/src/: daemon.rs  lib.rs  monitor.rs  words.rs
crates/grotto-serve/: Cargo.toml
crates/grotto-serve/src/: lib.rs
crates/grotto-serve/tests/: integration.rs
crates/grotto-serve/web/: app.js  crab-styles.html  sandbox.html  sandbox.js  session.html
docs/: market-research-2026-02.md
skill/: SKILL.md
web/: app.js  index.html  session.html  style.css
