[package]
name = "grotto-serve"
version.workspace = true
edition.workspace = true

[lib]
name = "grotto_serve"
path = "src/lib.rs"

[dependencies]
grotto-core = { path = "../grotto-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.28"
